--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ECD27F</color>
-    <color name="colorPrimaryDark">#CE8484</color>
+    <color name="colorPrimaryDark">#FFECB3</color>
     <color name="colorAccent">#E57373</color>
     <color name="text_color">#EB200E01</color>
 </resources>
